Add settings forced language.