@@ -1,19 +1,19 @@
 package dev.fileeditor.votl.utils.file.lang;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-
 import dev.fileeditor.votl.App;
 import dev.fileeditor.votl.objects.Emote;
 
 import dev.fileeditor.votl.utils.message.MessageUtil;
+import net.dv8tion.jda.api.entities.User;
 import net.dv8tion.jda.api.interactions.DiscordLocale;
 import net.dv8tion.jda.api.interactions.callbacks.IReplyCallback;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 @SuppressWarnings("unused")
 public class LocaleUtil {
@@ -21,12 +21,11 @@ public class LocaleUtil {
 	private final App bot;
 	private final LangUtil langUtil;
 
-	private final DiscordLocale defaultLocale;
+	public static final DiscordLocale DEFAULT_LOCALE = DiscordLocale.ENGLISH_UK;
 
-	public LocaleUtil(App bot, DiscordLocale defaultLocale) {
+	public LocaleUtil(App bot) {
 		this.bot = bot;
 		this.langUtil = new LangUtil(bot.getFileManager());
-		this.defaultLocale = defaultLocale;
 	}
 
 	@NotNull
@@ -35,33 +34,36 @@ public class LocaleUtil {
 	}
 
 	@NotNull
-	public String getLocalized(DiscordLocale locale, String path, String user) {
+	public String getLocalized(DiscordLocale locale, String path, User user) {
 		return getLocalized(locale, path, user, true);
 	}
 
 	@NotNull
-	public String getLocalized(DiscordLocale locale, String path, String user, boolean format) {
+	public String getLocalized(DiscordLocale locale, String path, User user, boolean format) {
+		String name = user.getEffectiveName();
 		if (format)
-			user = MessageUtil.getFormattedMembers(this, user);
+			name = MessageUtil.getFormattedUsers(this, name);
 
-		return Objects.requireNonNull(getLocalized(locale, path).replace("{user}", user));
+		return Objects.requireNonNull(getLocalized(locale, path)
+			.replace("{user}", name));
 	}
 
 	@NotNull
-	public String getLocalized(DiscordLocale locale, String path, String user, String target) {
-		target = (target == null ? "null" : target);
-		
-		return getLocalized(locale, path, user, Collections.singletonList(target), false);
+	public String getLocalized(DiscordLocale locale, String path, User user, String target) {
+		if (target == null)
+			return getLocalized(locale, path, user, List.of(), false);
+		else
+			return getLocalized(locale, path, user, List.of(target), false);
 	}
 
 	@NotNull
-	public String getLocalized(DiscordLocale locale, String path, String user, List<String> targets) {
+	public String getLocalized(DiscordLocale locale, String path, User user, List<String> targets) {
 		return getLocalized(locale, path, user, targets, false);
 	}
 
 	@NotNull
-	public String getLocalized(DiscordLocale locale, String path, String user, List<String> targets, boolean format) {
-		String targetReplacement = targets.isEmpty() ? "null" : MessageUtil.getFormattedMembers(this, targets.toArray(new String[0]));
+	public String getLocalized(DiscordLocale locale, String path, User user, List<String> targets, boolean format) {
+		String targetReplacement = targets.isEmpty() ? "null" : MessageUtil.getFormattedUsers(this, targets.toArray(String[]::new));
 
 		return Objects.requireNonNull(getLocalized(locale, path, user, format)
 			.replace("{target}", targetReplacement)
@@ -103,29 +105,30 @@ public class LocaleUtil {
 		return localeMap;
 	}
 
+
 	@NotNull
 	public String getText(@NotNull String path) {
-		return getLocalized(defaultLocale, path);
+		return getLocalized(DEFAULT_LOCALE, path);
 	}
 
 	@NotNull
 	public String getText(IReplyCallback replyCallback, @NotNull String path) {
-		return getLocalized(replyCallback.getUserLocale(), path);
+		return getLocalized(getLocale(replyCallback), path);
 	}
 
 	@NotNull
 	public String getUserText(IReplyCallback replyCallback, @NotNull String path) {
-		return getUserText(replyCallback, path, Collections.emptyList(), false);
+		return getUserText(replyCallback, path, List.of(), false);
 	}
 
 	@NotNull
 	public String getUserText(IReplyCallback replyCallback, @NotNull String path, boolean format) {
-		return getUserText(replyCallback, path, Collections.emptyList(), format);
+		return getUserText(replyCallback, path, List.of(), format);
 	}
 
 	@NotNull
 	public String getUserText(IReplyCallback replyCallback, @NotNull String path, String target) {
-		return getUserText(replyCallback, path, Collections.singletonList(target), false);
+		return getUserText(replyCallback, path, List.of(target), false);
 	}
 	
 	@NotNull
@@ -135,12 +138,30 @@ public class LocaleUtil {
 
 	@NotNull
 	private String getUserText(IReplyCallback replyCallback, @NotNull String path, List<String> targets, boolean format) {
-		return getLocalized(replyCallback.getUserLocale(), path, replyCallback.getUser().getEffectiveName(), targets, format);
+		return getLocalized(replyCallback.getUserLocale(), path, replyCallback.getUser(), targets, format);
 	}
 
 	@NotNull
 	public String getGuildText(IReplyCallback replyCallback, @NotNull String path) {
-		return getLocalized(replyCallback.getGuildLocale(), path);
+		DiscordLocale locale = App.getInstance().getDBUtil().getGuildSettings(replyCallback.getGuild()).getLocale();
+		if (locale == DiscordLocale.UNKNOWN)
+			locale = replyCallback.getGuildLocale();
+
+		return getLocalized(locale, path);
+	}
+
+	@NotNull
+	public DiscordLocale getLocale(IReplyCallback replyCallback) {
+		if (replyCallback.isFromGuild()) {
+			DiscordLocale locale = App.getInstance().getDBUtil().getGuildSettings(replyCallback.getGuild()).getLocale();
+			if (locale == DiscordLocale.UNKNOWN) {
+				return replyCallback.getGuildLocale();
+			} else {
+				return locale;
+			}
+		} else {
+			return replyCallback.getUserLocale();
+		}
 	}
 
 }
